[package]
name = "entangled-tool"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
description = "Publisher command-line tool for the Entangled v1.0 protocol: key ceremony, document build and sign, verification, and site scaffolding."
repository = "https://github.com/samjanny/entangled-tool"

[dependencies]
# The protocol core library. Pinned to a published tag (spec v1.0-rc.48) so
# the build is reproducible; bump the tag when entangled-api advances.
entangled-core = { git = "https://github.com/samjanny/entangled-api.git", tag = "v0.10.0" }

clap = { version = "4", features = ["derive"] }
# OS entropy for fresh key seeds. The core crate gates key generation behind
# its test-utils feature, so the tool derives 32-byte seeds here and feeds them
# to the core from_seed constructors rather than enabling that feature.
getrandom = "0.2"
serde_json = "1"

[profile.release]
strip = true
