[package]
name = "entangled-tool"
version = "0.3.0"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
description = "Publisher command-line tool for the Entangled v1.0 protocol: key ceremony, document build and sign, verification, and site scaffolding."
repository = "https://github.com/samjanny/entangled-tool"

[dependencies]
# The protocol core library. Pinned to a published tag (spec v1.0-rc.48) so
# the build is reproducible; bump the tag when entangled-api advances.
entangled-core = { git = "https://github.com/samjanny/entangled-api.git", tag = "v0.10.0" }

clap = { version = "4", features = ["derive"] }
# OS entropy for fresh key seeds. The core crate gates key generation behind
# its test-utils feature, so the tool derives 32-byte seeds here and feeds them
# to the core from_seed constructors rather than enabling that feature.
getrandom = "0.2"
serde_json = "1"
# CommonMark parser for the `content` command, which converts Markdown into the
# Entangled closed block grammar. Markdown that has no Entangled representation
# (tables, nested lists, raw HTML) is rejected, not silently dropped.
pulldown-cmark = { version = "0.12", default-features = false }
# Header-only image dimension reader: an image block needs width and height,
# which the tool derives from the file rather than making the author hand-write
# them. Reads image headers only; does not decode pixel data.
imagesize = "0.13"
# Zero secret key material (seeds and their hex form) on drop, so it does not
# linger in freed memory, swap, or a core dump. Already in the tree transitively
# via ed25519-dalek; pinned here as a direct dependency.
zeroize = "1"

[profile.release]
strip = true
